Adicionar códigos básicos

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="description" content="Especialistas em recursos de multas de trânsito. Defenda seus direitos, evite pontos na CNH, recorra e não fique sem carta. Análise gratuita da sua multa. Escritório em Franca-SP">
     <meta name="recorrasuamulta" content="Defesa de Multas" />
     <meta name="robots" content="index, follow"/>
-    <link rel="canonical" href="https://www.recorrasuamulta.com.br/" />
+    <link rel="canonical" href="https://www.mariobassi.com/" />
     <link rel="stylesheet" href="style.css?v=2.1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="favicon.ico?v=3" type="image/x-icon">
     <meta property="og:title" content="Defesa de Multas - Franca-SP" />
     <meta property="og:description" content="Evite perder sua CNH. Recorra com especialistas. Apresente defesa agora!" />
-    <meta property="og:image" content="https://recorrasuamulta.com.br/#serviços" />
-    <meta property="og:url" content="https://recorrasuamulta.com.br" />
+    <meta property="og:image" content="https://mariobassi.com/#serviços" />
+    <meta property="og:url" content="https://mariobassi.com/" />
     <meta property="og:type" content="website" />
     <!-- Google tag (gtag.js) -->
     
@@ -342,8 +342,8 @@
                 <h2>Entre em Contato Conosco</h2>
                 <div class="contact-wrapper">
                     <div class="contact-form">
-                        <form action="https://formsubmit.co/recorrasuamulta1@gmail.com" method="POST">
-                            <input type="hidden" name="_next" value="https://recorrasuamulta.com.br/obrigado.html">
+                        <form action="https://formsubmit.co/marioalexandreb@gmail.com" method="POST">
+                            <input type="hidden" name="_next" value="https://mariobassi.com/obrigado.html">
                             <input type="hidden" name="_subject" value="Novo Contato - Recurso de Multa">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
@@ -374,7 +374,7 @@
                     <div class="contact-info">
                         <h3>Outras Formas de Contato:</h3>
                         <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:recorrasuamulta1@gmail.com">recorrasuamulta1@gmail.com</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:marioalexandreb@gmail.com">marioalexandreb@gmail.com</a></p>
                         <h4>Horário de Atendimento:</h4>
                         <p><i class="fas fa-clock"></i> Segunda a Sexta, das 07:30 às 19:00.</p>
                         <p><i class="fas fa-clock"></i> Sábado, das 09:00 às 14:00.</p>
@@ -470,16 +470,16 @@
                 <div class="footer-contact">
                     <h4>Contato</h4>
                     <p><i class="fab fa-whatsapp"></i><a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
-                    <p><i class="fas fa-envelope"></i><a href="mailto:recorrasuamulta1@gmail.com">recorrasuamulta1@gmail.com</a></p>
+                    <p><i class="fas fa-envelope"></i><a href="mailto:marioalexandreb@gmail.com">marioalexandreb@gmail.com</a></p>
                     <p><strong>Franca-SP</strong></p>
                     <p><strong>WhatsApp:</strong> <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
-                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/recorrasuamulta/" target="_blank">@recorrasuamulta</a></p>
+                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/mariobassiadv/" target="_blank">@mariobassiadv</a></p>
                 </div>
                 <div class="footer-social">
                     <h4>Siga-nos</h4>
                     <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/recorrasuamulta/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/mariobassiadv/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
