Adição de mais alguns ajustes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="#inicio" class="logo"><img src="Logo_principal.png?v=3" alt="Soluções/Multas de Trânsito Logo" class="logo-img">Multas de Trânsito</a>
+            <a href="#inicio" class="logo"><img src="Logo_principal.png?v=3" alt="Soluções/Multas de Trânsito Logo" class="logo-img">Mário Bassi</a>
             <nav class="main-nav">
                 <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
                     <i class="fas fa-bars"></i>
@@ -87,7 +87,7 @@
                     <li><a href="#depoimentos">Depoimentos</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." class="btn btn-primary nav-cta" target="_blank"> <i class="fab fa-whatsapp"></i> Análise Gratuita</a></li>
+                    <li><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary nav-cta" target="_blank"> <i class="fab fa-whatsapp"></i> Análise Gratuita</a></li>
                 </ul>
             </nav>
         </div>
@@ -96,11 +96,11 @@
     <main>
         <section id="inicio" class="hero">
             <div class="container">
-                <h1>Recurso Deferido ou 40% do Seu Dinheiro de Volta</h1>
+                <h1>Recorra sua multa agora!</h1>
                 <p class="hero-sub-guarantee">É a nossa garantia em contrato. Tenha a melhor defesa para sua multa com a segurança que você merece.</p>
                 <p class="subtitle">Somos especialistas com mais de 20 anos de experiência no DETRAN. Cuidamos da sua CNH para você não ter que se preocupar. Foi multado? Entre em contato conosco, faremos analise gratuita do seu caso e podemos te ajudar.</p>
                 <p class="subtitle">Recorra agora, apresente defesa e não fique sem a CNH.</p>
-                <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." class="btn btn-primary btn-large hero-cta" target="_blank"><i class="fab fa-whatsapp"></i> Solicite Sua Análise Gratuita</a>
+                <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large hero-cta" target="_blank"><i class="fab fa-whatsapp"></i> Solicite Sua Análise Gratuita</a>
                 <div class="hero-benefits">
                     <div><i class="fas fa-shield-alt"></i> Defesa Personalizada</div>
                     <div><i class="fas fa-file-contract"></i> Garantia em Contrato</div>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="text-center cta-section-button">
-                    <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." class="btn btn-secondary" target="_blank"><i class="fab fa-whatsapp"></i> Saiba Como Podemos Ajudar</a>
+                    <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-secondary" target="_blank"><i class="fab fa-whatsapp"></i> Saiba Como Podemos Ajudar</a>
                 </div>
             </div>
         </section>
@@ -332,7 +332,7 @@
             <div class="container text-center">
                 <h2>Não Deixe Para Depois! Defenda Seus Direitos Hoje Mesmo. Com potencial de reembolso.</h2>
                 <p>Os prazos para recorrer são curtos. Entre em contato agora mesmo para uma análise gratuita da sua multa e descubra como podemos te ajudar a evitar transtornos e prejuízos.</p>
-                <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." class="btn btn-primary btn-large"><i class="fab fa-whatsapp"></i> QUERO MINHA ANÁLISE GRATUITA</a>
+                <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large"><i class="fab fa-whatsapp"></i> QUERO MINHA ANÁLISE </a>
                 <p class="small-text">Análise gratuita e sem compromisso.</p>
             </div>
         </section>
@@ -342,7 +342,7 @@
                 <h2>Entre em Contato Conosco</h2>
                 <div class="contact-wrapper">
                     <div class="contact-form">
-                        <form action="https://formsubmit.co/marioalexandreb@gmail.com" method="POST">
+                        <form action="https://formsubmit.co/atendimento@mariobassiesoares.com.br" method="POST">
                             <input type="hidden" name="_next" value="https://mariobassi.com/obrigado.html">
                             <input type="hidden" name="_subject" value="Novo Contato - Recurso de Multa">
                             <input type="hidden" name="_captcha" value="false">
@@ -373,13 +373,14 @@
                     </div>
                     <div class="contact-info">
                         <h3>Outras Formas de Contato:</h3>
-                        <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:marioalexandreb@gmail.com">marioalexandreb@gmail.com</a></p>
+                        <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/551634091669?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 3409-1669</a></p>
+                        <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:atendimento@mariobassiesoares.com.br">atendimento@mariobassiesoares.com.br</a></p>
                         <h4>Horário de Atendimento:</h4>
-                        <p><i class="fas fa-clock"></i> Segunda a Sexta, das 07:30 às 19:00.</p>
+                        <p><i class="fas fa-clock"></i> Segunda a Sexta, das 08:00 às 17:00.</p>
                         <p><i class="fas fa-clock"></i> Sábado, das 09:00 às 14:00.</p>
                         <h4>Nosso Endereço:</h4>
-                        <p><i class="fas fa-map-marker-alt"></i> Rua Bahia, 1077 - Vila Aparecida <br>Franca/SP - CEP 14401-320</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Rua Paraná, 1665 - Santo Agostinho <br>Franca/SP - CEP 14401-248</p>
                     </div>
                 </div>
             </div>
@@ -388,7 +389,7 @@
         <section id="privacidade" class="section-padding bg-light">
             <div class="container legal-text">
                 <h2>Política de Privacidade</h2>
-                <p><strong>Última Atualização:</strong> 16 de Junho de 2025</p>
+                <p><strong>Última Atualização:</strong> 16 de Outubro de 2025</p>
                 <p>A nossa equipe leva a sua privacidade a sério. Esta política descreve como coletamos, usamos, compartilhamos e protegemos suas informações pessoais quando você utiliza nosso site e nossos serviços, em conformidade com a Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/2018).</p>
 
                 <h3>1. Informações que Coletamos</h3>
@@ -418,7 +419,7 @@
         <section id="termos" class="section-padding">
             <div class="container legal-text">
                 <h2>Termos de Uso</h2>
-                <p><strong>Última Atualização:</strong> 16 de Junho de 2025</p>
+                <p><strong>Última Atualização:</strong> 16 de Outubro de 2025</p>
                 <p>Bem-vindo ao site Multas de Trânsito.
  Ao acessar ou usar nosso site, você concorda em cumprir estes Termos de Uso e todas as leis e regulamentos aplicáveis.</p>
                 <h3>1. Aceitação dos Termos</h3>
@@ -469,15 +470,15 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Contato</h4>
-                    <p><i class="fab fa-whatsapp"></i><a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
-                    <p><i class="fas fa-envelope"></i><a href="mailto:marioalexandreb@gmail.com">marioalexandreb@gmail.com</a></p>
+                    <p><i class="fab fa-whatsapp"></i><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
+                    <p><i class="fas fa-envelope"></i><a href="mailto:atendimento@mariobassiesoares.com.br">atendimento@mariobassiesoares.com.br</a></p>
                     <p><strong>Franca-SP</strong></p>
-                    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." target="_blank">(16) 99225-7956</a></p>
+                    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
                     <p><strong>Instagram:</strong> <a href="https://www.instagram.com/mariobassiadv/" target="_blank">@mariobassiadv</a></p>
                 </div>
                 <div class="footer-social">
                     <h4>Siga-nos</h4>
-                    <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.instagram.com/mariobassiadv/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
@@ -485,7 +486,7 @@
             </div>
             <hr>
             <div class="footer-bottom">
-                <p><strong>&copy; 2025</strong> - Multas de Trânsito. Todos os direitos reservados. CNPJ: 51.690.564/0001-34.</p>
+                <p><strong>&copy; 2025</strong> - Multas de Trânsito. Todos os direitos reservados. CNPJ: 30.891.281/0001-80.</p>
                 <p>
                     <a href="#privacidade">Política de Privacidade</a> | <a href="#termos">Termos de Uso</a>
                 </p>
@@ -494,7 +495,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/5516992257956?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise%20gratuita." class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
+    <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
         <i class="fab fa-whatsapp"></i><span>Recorrer agora</span>
     </a>
     <!-- Google Tag Manager (noscript) -->
