Implementação do código, adição de documentos, e ajustes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <li><a href="#depoimentos">Depoimentos</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary nav-cta" target="_blank"> <i class="fab fa-whatsapp"></i> Análise Gratuita</a></li>
+                    <li><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary nav-cta" target="_blank"> <i class="fab fa-whatsapp"></i> Análise com advogado</a></li>
                 </ul>
             </nav>
         </div>
@@ -100,7 +100,7 @@
                 <p class="hero-sub-guarantee">É a nossa garantia em contrato. Tenha a melhor defesa para sua multa com a segurança que você merece.</p>
                 <p class="subtitle">Somos especialistas com mais de 20 anos de experiência no DETRAN. Cuidamos da sua CNH para você não ter que se preocupar. Foi multado? Entre em contato conosco, faremos analise gratuita do seu caso e podemos te ajudar.</p>
                 <p class="subtitle">Recorra agora, apresente defesa e não fique sem a CNH.</p>
-                <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large hero-cta" target="_blank"><i class="fab fa-whatsapp"></i> Solicite Sua Análise Gratuita</a>
+                <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large hero-cta" target="_blank"><i class="fab fa-whatsapp"></i> Solicite Sua Análise com um Advogado</a>
                 <div class="hero-benefits">
                     <div><i class="fas fa-shield-alt"></i> Defesa Personalizada</div>
                     <div><i class="fas fa-file-contract"></i> Garantia em Contrato</div>
@@ -309,7 +309,7 @@
         <section id="sobre" class="section-padding">
             <div class="container about-us-container">
                 <div class="about-us-image">
-                    <img src="./equipe.png?v=2" alt="Equipe Multas de Trânsito">
+                    <img src="./equipe.JPG?v=2" alt="Equipe Multas de Trânsito">
                 </div>
                 <div class="about-us-content">
                     <h2>Sobre Nós: Sua Tranquilidade é Nossa Prioridade</h2>
