Adição de funcionalidades

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <section id="inicio" class="hero">
             <div class="container">
                 <h1>Recorra sua multa agora!</h1>
-                <p class="hero-sub-guarantee">É a nossa garantia em contrato. Tenha a melhor defesa para sua multa com a segurança que você merece.</p>
-                <p class="subtitle">Somos especialistas com mais de 20 anos de experiência no DETRAN. Cuidamos da sua CNH para você não ter que se preocupar. Foi multado? Entre em contato conosco, faremos analise gratuita do seu caso e podemos te ajudar.</p>
+                <p class="hero-sub-guarantee">É a nossa garantia fazer a melhor defesa para sua multa com a segurança que você merece, cuidamos so seu</p>
+                <p class="subtitle">Equipe de advogados especialistas com mais de 20 anos de experiência de atuação. Cuidamos da sua CNH para você não ter que se preocupar. Foi multado? Entre em contato conosco, fale diretamente com um advogado.</p>
                 <p class="subtitle">Recorra agora, apresente defesa e não fique sem a CNH.</p>
                 <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large hero-cta" target="_blank"><i class="fab fa-whatsapp"></i> Solicite Sua Análise com um Advogado</a>
                 <div class="hero-benefits">
@@ -332,7 +332,7 @@
             <div class="container text-center">
                 <h2>Não Deixe Para Depois! Defenda Seus Direitos Hoje Mesmo. Com potencial de reembolso.</h2>
                 <p>Os prazos para recorrer são curtos. Entre em contato agora mesmo para uma análise gratuita da sua multa e descubra como podemos te ajudar a evitar transtornos e prejuízos.</p>
-                <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large"><i class="fab fa-whatsapp"></i> QUERO MINHA ANÁLISE </a>
+                <a style="color: #fff;" href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." class="btn btn-primary btn-large"><i class="fab fa-whatsapp"></i> QUERO MINHA ANÁLISE </a>
                 <p class="small-text">Análise gratuita e sem compromisso.</p>
             </div>
         </section>
