--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
                 <div class="footer-logo">
                     <img src="Logo_principal.png?v=3" alt="Muktas de Trânsito Logo" class="logo-img" style="text-align: center;">
                     <a href="#inicio" class="logo">Multas de Trânsito</a>
-                    <p>Sua defesa especializada contra multas.</p>
-                    <p>Não fique sem a sua CNH! Apresente defesa</p>
+                    <p style="color: #fff;">Sua defesa especializada contra multas.</p>
+                    <p style="color: #fff;">Não fique sem a sua CNH! Apresente defesa</p>
                 </div>
                 <div class="footer-nav">
                     <h4>Navegação</h4>
@@ -470,11 +470,11 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Contato</h4>
-                    <p><i class="fab fa-whatsapp"></i><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
-                    <p><i class="fas fa-envelope"></i><a href="mailto:atendimento@mariobassiesoares.com.br">atendimento@mariobassiesoares.com.br</a></p>
-                    <p><strong>Franca-SP</strong></p>
-                    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
-                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/mariobassiadv/" target="_blank">@mariobassiadv</a></p>
+                    <p><i style="color: #fff;" class="fab fa-whatsapp"></i><a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
+                    <p><i style="color: #fff;" class="fas fa-envelope"></i><a href="mailto:atendimento@mariobassiesoares.com.br">atendimento@mariobassiesoares.com.br</a></p>
+                    <p style="color: #fff;"><strong>Franca-SP</strong></p>
+                    <p style="color: #fff;"><strong>WhatsApp:</strong> <a href="https://wa.me/5516991223363?text=Ol%C3%A1%2C%20Vi%20o%20servi%C3%A7o%20de%20voc%C3%AAs%20no%20site%2C%20estou%20precisando%20de%20ajuda%20com%20a%20CNH%20e%20gostaria%20de%20uma%20an%C3%A1lise." target="_blank">(16) 99122-3363</a></p>
+                    <p style="color: #fff;"><strong>Instagram:</strong> <a href="https://www.instagram.com/mariobassiadv/" target="_blank">@mariobassiadv</a></p>
                 </div>
                 <div class="footer-social">
                     <h4>Siga-nos</h4>
