Atualização do código

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="iOhN4o1NbIGbyvt4f6LHT_sOsU5mcIjLRd_bsUdoE7w" />
     <meta name="google-site-verification" content="85oS1NWiDkWfAjLGDGQRCvmpbntGTzzvlZMg_hYpHRo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multas de Trânsito | Defesa Especializada | Como recorrer | Recurso deferido ou 40% de volta | Escritorio em Franca-SP</title>
+    <title>Mário Bassi | Multas de Trânsito | Defesa Especializada | Como recorrer | Escritorio em Franca-SP</title>
     <meta name="description" content="Especialistas em recursos de multas de trânsito. Defenda seus direitos, evite pontos na CNH, recorra e não fique sem carta. Análise gratuita da sua multa. Escritório em Franca-SP">
     <meta name="recorrasuamulta" content="Defesa de Multas" />
     <meta name="robots" content="index, follow"/>
@@ -381,6 +381,7 @@
                         <p><i class="fas fa-clock"></i> Sábado, das 09:00 às 14:00.</p>
                         <h4>Nosso Endereço:</h4>
                         <p><i class="fas fa-map-marker-alt"></i> Rua Paraná, 1665 - Santo Agostinho <br>Franca/SP - CEP 14401-248</p>
+                        <img src="fachada_dia.JPG" alt="Fachada do escritório de advocacia" class="fachada-img">
                     </div>
                 </div>
             </div>
